--- a/homepage/news.html
+++ b/homepage/news.html
@@ -66,6 +66,11 @@
         This section contains news about new releases and other Data Crow related news. The change log text file, which is always updated for every release, can be found <a href="changelog.txt" target="new">here</a>.
 
         <br><br><br>
+        <span class="content_main_bold">17/08/2009 ~ Data Crow 3.4.15 has been released</span><br><br>
+        The 3.4.14 release was unfortunately incorrect. It contained an incorrected version of the item form.
+        The release fixes all these 3.4.14 related issues. Sorry for the inconvenience. You are all entitled to a free copy of Data Crow!
+
+        <br><br><br>
         <span class="content_main_bold">16/08/2009 ~ Data Crow 3.4.14 has been released</span><br><br>
         With this release the <b>startup</b> time of Data Crow has been <b>dramatically improved</b>. Furthermore you will find the item export
         and import wizards to be very convenient for migration purposes and to export single items and share these with your friends and family.
@@ -279,13 +284,13 @@
 
 	<br><br>
 
-	<span class="content_main_bold">16/08/2009<br>Data Crow 3.4.14 has been released</span><br>
-	The startup time has been dramatically reduced and there are two new migration tools to play with: the item import and export wizard.
+	<span class="content_main_bold">17/08/2009<br>Data Crow 3.4.15 has been released</span><br>
+	A maintenance release containing fixes for the incorrect 3.4.14 version. Sorry for the inconvenience.
 
 	<br><br>
 
-	<span class="content_main_bold">03/08/2009<br>Data Crow 3.4.13 patch 2 has been released</span><br>
-	This patch fixes a couple of issues related to views and file import functionality.
+	<span class="content_main_bold">16/08/2009<br>Data Crow 3.4.14 has been released</span><br>
+	The startup time has been dramatically reduced and there are two new migration tools to play with: the item import and export wizard.
 
     <!-- NEWS END -->
 
@@ -311,9 +316,9 @@
   <!-- DOWNLOAD -->
 
   <tr>
-    <td class="menu2" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_14_zipped.zip' onmouseover=this.className='menu2o' onMouseOut=this.className='menu2'>Zipped</td>
-    <td class="menu3" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_14_installer.zip' onmouseover=this.className='menu3o' onMouseOut=this.className='menu3'>Installer</td>
-    <td class="menu4" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_14_installer.exe' onmouseover=this.className='menu4o' onMouseOut=this.className='menu4'>Winstaller</td>
+    <td class="menu2" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_15_zipped.zip' onmouseover=this.className='menu2o' onMouseOut=this.className='menu2'>Zipped</td>
+    <td class="menu3" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_15_installer.zip' onmouseover=this.className='menu3o' onMouseOut=this.className='menu3'>Installer</td>
+    <td class="menu4" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_15_installer.exe' onmouseover=this.className='menu4o' onMouseOut=this.className='menu4'>Winstaller</td>
   </tr>
   <tr>
     <td height="10" colspan="3"></td>
@@ -330,7 +335,7 @@
     <td height="10" colspan="3"></td>
     </tr>
   <tr>
-    <td colspan="3" class="menu10" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_14_source.zip' onmouseover=this.className='menu10o' onMouseOut=this.className='menu10'>Source code</td>
+    <td colspan="3" class="menu10" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_15_source.zip' onmouseover=this.className='menu10o' onMouseOut=this.className='menu10'>Source code</td>
   </tr>
 
   <!-- END DOWNLOAD -->
