--- a/homepage/contact.html
+++ b/homepage/contact.html
@@ -91,13 +91,13 @@
 
 	<br><br>
 
-	<span class="content_main_bold">18/08/2009<br>Data Crow 3.4.16 has been released</span><br>
-	The Amazon online search did no longer work. This version has been adopted to deal with the new Amazon service functionality.
+	<span class="content_main_bold">25/08/2009<br>Data Crow 3.4.17 has been released</span><br>
+	A maintenance release: the IMDB search has been optimized and the CSV import has been improved.
 
 	<br><br>
 
-	<span class="content_main_bold">17/08/2009<br>Data Crow 3.4.15 has been released</span><br>
-	A maintenance release containing fixes for the incorrect 3.4.14 version. Sorry for the inconvenience.
+	<span class="content_main_bold">18/08/2009<br>Data Crow 3.4.16 has been released</span><br>
+	The Amazon online search did no longer work. This version has been adopted to deal with the new Amazon service functionality.
 
     <!-- NEWS END -->
 
@@ -124,9 +124,9 @@
   <!-- DOWNLOAD -->
 
   <tr>
-    <td class="menu2" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_16_zipped.zip' onmouseover=this.className='menu2o' onMouseOut=this.className='menu2'>Zipped</td>
-    <td class="menu3" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_16_installer.zip' onmouseover=this.className='menu3o' onMouseOut=this.className='menu3'>Installer</td>
-    <td class="menu4" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_16_installer.exe' onmouseover=this.className='menu4o' onMouseOut=this.className='menu4'>Winstaller</td>
+    <td class="menu2" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_17_zipped.zip' onmouseover=this.className='menu2o' onMouseOut=this.className='menu2'>Zipped</td>
+    <td class="menu3" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_17_installer.zip' onmouseover=this.className='menu3o' onMouseOut=this.className='menu3'>Installer</td>
+    <td class="menu4" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_17_installer.exe' onmouseover=this.className='menu4o' onMouseOut=this.className='menu4'>Winstaller</td>
   </tr>
   <tr>
     <td height="10" colspan="3"></td>
@@ -143,7 +143,7 @@
     <td height="10" colspan="3"></td>
     </tr>
   <tr>
-    <td colspan="3" class="menu10" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_16_source.zip' onmouseover=this.className='menu10o' onMouseOut=this.className='menu10'>Source code</td>
+    <td colspan="3" class="menu10" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_17_source.zip' onmouseover=this.className='menu10o' onMouseOut=this.className='menu10'>Source code</td>
   </tr>
 
   <!-- END DOWNLOAD -->
