--- a/help/items/itemform.html
+++ b/help/items/itemform.html
@@ -15,13 +15,16 @@
     Changes to an item can be saved by pressing the "Save" button. Pressing the "Cancel" button discards any changes you have made (a warning is shown first) and closes the form. To delete an item, press the "Delete" button.
 
 	<h2>Images</h2>
-    Each image of an item is shown in a seperate tab. Images can be exported, edited, added, deleted or replaced via these tabs. To add or replace an image select "open" from the "file" menu and browse for the specific image. To export / save the image select "save as". <br>
-    Via the "edit" menu an image can be opened in the image editor (ImageJ) or deleted.
+    Each image of an item is shown in a separate tab. Images can be exported, edited, added, deleted or replaced via these tabs. 
+    To add or replace an image select for example "Add from File" from the "File" menu and browse for the specific image. 
+    To save the image to disk select "save as". <br>
+    Via the "edit" menu an image can edited or deleted. There are several options for editing such as rotating and sharpening.
 
     <h2>Online Update</h2>
-	Not all modules offer this functionality. The Online Update allows you to find information about your item using an online service. More on this is explained <a href="../onlinesearch/onlinesearch.html">here</a>. The information can be used to update your item, saving you the typing.
+	Not all modules offer this functionality. If this feature is available then there is a "Update" in the lower part of the item form.  
+	The Online Update allows you to find (and use) information about your item using an online service. More on this is explained <a href="../onlinesearch/onlinesearch.html">here</a>.
 
-    <h2>Read file information</h2>
+    <h2>Attach File Info</h2>
     To read the information from a movie file, a music file, etc go to the "file" menu and select "attach file info". If the item already has a filename defined, the information from that file is (re-) read. Otherwise a dialog is opened which allows you to browse for the file from which you want the information to be read. Data Crow will read the information from the file and update the values in the item form. 
 
   </body>
