--- a/homepage/news.html
+++ b/homepage/news.html
@@ -67,6 +67,15 @@
         can be found <a href="changelog.txt" target="new">here</a>.
 
         <br><br><br>
+        <span class="content_main_bold">14/09/2009 ~ Data Crow 3.4.20 HAS BEEN RECALLED</span><br><br>
+		The latest version, 3.4.20, contains a serious flaw. If you are using this version I urge you to install version 3.4.19 and restore your old backup.
+
+        <br><br><br>
+        <span class="content_main_bold">13/09/2009 ~ Data Crow 3.4.20 has been released</span><br><br>
+		The web module has been updated and has been added to the main package. Several other improvements have been made such as adding general language
+		and country fields to most modules.
+
+        <br><br><br>
         <span class="content_main_bold">09/09/2009 ~ Data Crow 3.4.19 has been released</span><br><br>
 		A small maintenance release to fix the locked database message.
 
@@ -303,13 +312,13 @@
 
 	<br><br>
 
-	<span class="content_main_bold">09/09/2009<br>Data Crow 3.4.19 has been released</span><br>
-	A small maintenance release to fix the locked database message.
+    <span class="content_main_bold">14/09/2009<br>Data Crow 3.4.20 HAS BEEN RECALLED</span><br><br>
+    The latest version, 3.4.20, contains a serious flaw. If you are using this version I urge you to install version 3.4.19 and restore your old backup.
 
 	<br><br>
 
-	<span class="content_main_bold">07/09/2009<br>Data Crow 3.4.18 has been released</span><br>
-	This release contains many minor fixes and small improvements but also something new; from now on you can choose to be notified of new releases.
+	<span class="content_main_bold">09/09/2009<br>Data Crow 3.4.19 has been released</span><br>
+	A small maintenance release to fix the locked database message.
 
     <!-- NEWS END -->
 
@@ -337,7 +346,7 @@
   <tr>
     <td class="menu2" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_19_zipped.zip' onmouseover=this.className='menu2o' onMouseOut=this.className='menu2'>Zipped</td>
     <td class="menu3" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_19_installer.zip' onmouseover=this.className='menu3o' onMouseOut=this.className='menu3'>Installer</td>
-    <td class="menu4" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_19_installer.exe' onmouseover=this.className='menu4o' onMouseOut=this.className='menu4'>Winstaller</td>
+    <td class="menu4" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_19_windows_installer.zip' onmouseover=this.className='menu4o' onMouseOut=this.className='menu4'>Winstaller</td>
   </tr>
   <tr>
     <td height="10" colspan="3"></td>
