--- a/homepage/screenshots.html
+++ b/homepage/screenshots.html
@@ -102,13 +102,13 @@
 
 	<br><br>
 
-    <span class="content_main_bold">20/09/2009<br>Data Crow 3.5 has been released</span><br>
-    The 3.5 version improves the ISBN search, adds a language and country module and improves the Amazon.com and IMDB.com online services.
+	<span class="content_main_bold">26/09/2009<br>Data Crow 3.5.1 has been released</span><br>
+	A maintenance release. Small fixes for the online services and a small improvement to the module wizards.
 
 	<br><br>
 
-	<span class="content_main_bold">09/09/2009<br>Data Crow 3.4.19 has been released</span><br>
-	A small maintenance release to fix the locked database message.
+    <span class="content_main_bold">20/09/2009<br>Data Crow 3.5 has been released</span><br>
+    The 3.5 version improves the ISBN search, adds a language and country module and improves the Amazon.com and IMDB.com online services.
 
     <!-- NEWS END -->
 
@@ -134,9 +134,9 @@
   <!-- DOWNLOAD -->
 
   <tr>
-    <td class="menu2" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_5_0_zipped.zip' onmouseover=this.className='menu2o' onMouseOut=this.className='menu2'>Zipped</td>
-    <td class="menu3" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_5_0_installer.zip' onmouseover=this.className='menu3o' onMouseOut=this.className='menu3'>Installer</td>
-    <td class="menu4" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_5_0_windows_installer.zip' onmouseover=this.className='menu4o' onMouseOut=this.className='menu4'>Winstaller</td>
+    <td class="menu2" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_5_1_zipped.zip' onmouseover=this.className='menu2o' onMouseOut=this.className='menu2'>Zipped</td>
+    <td class="menu3" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_5_1_installer.zip' onmouseover=this.className='menu3o' onMouseOut=this.className='menu3'>Installer</td>
+    <td class="menu4" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_5_1_windows_installer.zip' onmouseover=this.className='menu4o' onMouseOut=this.className='menu4'>Winstaller</td>
   </tr>
   <tr>
     <td height="10" colspan="3"></td>
@@ -153,7 +153,7 @@
     <td height="10" colspan="3"></td>
     </tr>
   <tr>
-    <td colspan="3" class="menu10" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_5_0_source.zip' onmouseover=this.className='menu10o' onMouseOut=this.className='menu10'>Source code</td>
+    <td colspan="3" class="menu10" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_5_1_source.zip' onmouseover=this.className='menu10o' onMouseOut=this.className='menu10'>Source code</td>
   </tr>
 
   <!-- END DOWNLOAD -->
