--- a/homepage/screenshots.html
+++ b/homepage/screenshots.html
@@ -102,14 +102,13 @@
 
 	<br><br>
 
-    <span class="content_main_bold">6/1/2010<br>Data Crow 3.8.7 has been released</span><br>
-    The 'new user experience' has been improved. Tooltips have been added to all menu and tool bar items and a new wizard has been added.
+    <span class="content_main_bold">5/2/2010<br>Data Crow 3.8.8 has been released</span><br><br>
+    This release contains minor bug fixes.
 
 	<br><br>
 
-    <span class="content_main_bold">31/12/2009<br>Data Crow 3.8.6 has been released</span><br>
-    Improvements have been made to the image importer process and of course the necessary bug fixes have been made.
-
+    <span class="content_main_bold">6/1/2010<br>Data Crow 3.8.7 has been released</span><br><br>
+    The 'new user experience' has been improved. Tooltips have been added to all menu and tool bar items and a new wizard has been added.
 
     <!-- NEWS END -->
 
@@ -135,9 +134,9 @@
   <!-- DOWNLOAD -->
 
   <tr>
-    <td class="menu2" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_8_7_zipped.zip' onmouseover=this.className='menu2o' onMouseOut=this.className='menu2'>Zipped</td>
-    <td class="menu3" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_8_7_installer.zip' onmouseover=this.className='menu3o' onMouseOut=this.className='menu3'>Installer</td>
-    <td class="menu4" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_8_7_windows_installer.zip' onmouseover=this.className='menu4o' onMouseOut=this.className='menu4'>Winstaller</td>
+    <td class="menu2" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.8.8/datacrow_3_8_8_zipped.zip' onmouseover=this.className='menu2o' onMouseOut=this.className='menu2'>Zipped</td>
+    <td class="menu3" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.8.8/datacrow_3_8_8_installer.zip' onmouseover=this.className='menu3o' onMouseOut=this.className='menu3'>Installer</td>
+    <td class="menu4" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.8.8/datacrow_3_8_8_windows_installer.zip' onmouseover=this.className='menu4o' onMouseOut=this.className='menu4'>Winstaller</td>
   </tr>
   <tr>
     <td height="10" colspan="3"></td>
@@ -154,7 +153,7 @@
     <td height="10" colspan="3"></td>
     </tr>
   <tr>
-    <td colspan="3" class="menu10" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_8_7_source.zip' onmouseover=this.className='menu10o' onMouseOut=this.className='menu10'>Source code</td>
+    <td colspan="3" class="menu10" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.8.8/datacrow_3_8_8_source.zip' onmouseover=this.className='menu10o' onMouseOut=this.className='menu10'>Source code</td>
   </tr>
 
   <!-- END DOWNLOAD -->
